version patrocinadores y perfil